# dochooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  justfile  pyproject.toml
.github/workflows/: black-fmt.yml  lint-and-fmt.yml  release.yml  unit-test.yml
dochooks/: __init__.py  __main__.py  _compat.py
dochooks/api_doc_checker/: check.py  utils.py  visitor.py
dochooks/api_doc_checker/checkers/: __init__.py  checker.py  code_example_checker.py  dead_link_checker.py  parameters_checker.py  title_checker.py
dochooks/api_doc_checker/core/: directives.py  parser.py  roles.py
dochooks/api_doc_checker/visitors/: title_checker.py
dochooks/insert_whitespace_between_cn_and_en_char/: check.py  format.py  regex.py
dochooks/utils/: return_code.py
pre_commit_hooks/: __main__.py
src/dochooks/: __init__.py
src/dochooks/check_case_conflict/: check.py
src/dochooks/insert_whitespace_between_cn_and_en_char/: pragma.py
src/dochooks/utils/: return_code.py
tests/: test_dochooks.py  test_pre_commit_hooks.py
tests/test_api_doc_checker/test_checkers/: test_parameters_checker.py
tests/test_check_case_conflict/: test_check.py
tests/test_insert_whitespace_between_cn_and_en_char/: test_check_and_format.py  test_pragma.py  test_regex.py
tests/test_insert_whitespace_between_cn_and_en_char.py/: test_check_and_format.py  test_regex.py
