[project]
name = "dochooks"
version = "0.4.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = []
license = { text = "MIT" }
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["typing-extensions>=4.3.0"]

[project.urls]
Homepage = "https://github.com/PFCCLab/dochooks"
Documentation = "https://github.com/PFCCLab/dochooks"
Repository = "https://github.com/PFCCLab/dochooks"
Issues = "https://github.com/PFCCLab/dochooks/issues"

[project.scripts]
check-whitespace-between-cn-and-en-char = "dochooks.insert_whitespace_between_cn_and_en_char.check:main"
insert-whitespace-between-cn-and-en-char = "dochooks.insert_whitespace_between_cn_and_en_char.format:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.3",
  "tomli>=2.0.2; python_version < '3.11'",
  "pyright>=1.1.384",
  "pytest-rerunfailures>=14.0",
  "ruff>=0.6.9",
  "pre-commit>=3.5.0",
]

[tool.pyright]
include = ["dochooks", "tests"]
pythonVersion = "3.8"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["dochooks"]
combine-as-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
